--- a/core/pom.xml
+++ b/core/pom.xml
@@ -14,7 +14,7 @@
     <version>1.0.1-SNAPSHOT</version>
     <name>Paytrail Java Library Core</name>
     <description>Paytrail Java Library Implementation</description>
-    <url>https://vismapay.fi</url>
+    <url>https://docs.paytrail.com/#/</url>
 
     <properties>
         <java.version>11</java.version>
@@ -64,6 +64,12 @@
             <artifactId>junit-jupiter</artifactId>
             <version>RELEASE</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.6.1</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
