--- a/core/pom.xml
+++ b/core/pom.xml
@@ -77,16 +77,16 @@
 
     <distributionManagement>
         <repository>
-            <id>talpa-artifacts</id>
-            <url>https://pkgs.dev.azure.com/City-of-Helsinki/talpa-verkkokauppa/_packaging/talpa-artifacts/maven/v1
+            <id>${server.id}</id>
+            <url>https://pkgs.dev.azure.com/City-of-Helsinki/talpa-verkkokauppa/_packaging/${server.id}/maven/v1
             </url>
         </repository>
     </distributionManagement>
 
     <repositories>
         <repository>
-            <id>talpa-artifacts</id>
-            <url>https://pkgs.dev.azure.com/City-of-Helsinki/talpa-verkkokauppa/_packaging/talpa-artifacts/maven/v1
+            <id>${server.id}</id>
+            <url>https://pkgs.dev.azure.com/City-of-Helsinki/talpa-verkkokauppa/_packaging/${server.id}/maven/v1
             </url>
             <releases>
                 <enabled>true</enabled>
