--- a/example/pom.xml
+++ b/example/pom.xml
@@ -73,4 +73,90 @@
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>development</id>
+            <repositories>
+                <repository>
+                    <id>talpa-artifacts-dev</id>
+                    <url>
+                        https://pkgs.dev.azure.com/City-of-Helsinki/talpa-verkkokauppa/_packaging/talpa-artifacts-dev/maven/v1
+                    </url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </repository>
+            </repositories>
+        </profile>
+
+        <profile>
+            <id>test-repository</id>
+            <activation>
+                <property>
+                    <name>useTestRepo</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <properties>
+            </properties>
+            <distributionManagement>
+                <repository>
+                    <id>talpa-artifacts-dev</id>
+                    <url>
+                        https://pkgs.dev.azure.com/City-of-Helsinki/talpa-verkkokauppa/_packaging/talpa-artifacts-dev/maven/v1
+                    </url>
+                </repository>
+            </distributionManagement>
+            <repositories>
+                <repository>
+                    <id>talpa-artifacts-dev</id>
+                    <url>
+                        https://pkgs.dev.azure.com/City-of-Helsinki/talpa-verkkokauppa/_packaging/talpa-artifacts-dev/maven/v1
+                    </url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </repository>
+            </repositories>
+        </profile>
+
+        <profile>
+            <id>prod-repository</id>
+            <activation>
+                <property>
+                    <name>!useTestRepo</name>
+                </property>
+            </activation>
+            <properties>
+            </properties>
+            <distributionManagement>
+                <repository>
+                    <id>talpa-artifacts</id>
+                    <url>
+                        https://pkgs.dev.azure.com/City-of-Helsinki/talpa-verkkokauppa/_packaging/talpa-artifacts/maven/v1
+                    </url>
+                </repository>
+            </distributionManagement>
+            <repositories>
+                <repository>
+                    <id>talpa-artifacts</id>
+                    <url>
+                        https://pkgs.dev.azure.com/City-of-Helsinki/talpa-verkkokauppa/_packaging/talpa-artifacts/maven/v1
+                    </url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </repository>
+            </repositories>
+        </profile>
+    </profiles>
 </project>
